--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <label>Buscar nombre del coche: </label>
         <input type="text" id="buscarCoches" placeholder="Escribe el nombre del coche">
         
-        <button id="mostrarTodosCoches">Mostrar todos los coches</button><br><br>
+        <button id="mostrarTodosCoches">Cargar Galeria</button><br><br>
 
         <label>Buscar por filtros: </label>
         <label>Filtrar por marca: </label>
